# osmosis-indexer

./: .env  Cargo.toml  Config.toml  README.md  docker-compose.yml
migrations/: 20230504192030_create_schema.sql  20230505074248_create_schema.sql
src/: api.rs  data.rs  db.rs  error.rs  indexer.rs  main.rs  utils.rs
