[package]
name    = "osmosis-indexer"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow    = "1.0.71"
clap      = { version = "4.2.7", features = ["derive"] }
serde     = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio     = { version = "1.28.0", features = ["full"] }
toml      = "0.7.3"
